--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+decorator==4.0.4
+docopt==0.6.2
+ipython==4.0.1
+ipython-genutils==0.1.0
 lxml==3.5.0
+path.py==8.1.2
+pexpect==4.0.1
+pickleshare==0.5
+ptyprocess==0.5
 pykml==0.1.0
+simplegeneric==0.8.1
+traitlets==4.0.0
 wheel==0.24.0
